@startuml BCE_ViewCategories
title View Categories

left to right direction
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam classBackgroundColor White
skinparam classBorderColor #333333

class "view_categories.js" as B {
  +loadCategories()
  +renderTable(cats)
  +applyFilters()
}

class "ViewCategoryController" as C {
  +list
  getAll()
}

class "FRACategory" as E {
  +list
  getAllWithCampaignCount()
}

B -- C
C -- E

@enduml
